Added a bunch o' stuff

--- a/phpmotors/assets/css/add-class.css
+++ b/phpmotors/assets/css/add-class.css
@@ -29,7 +29,7 @@ form input[type="submit"] {
 }
 
 .muted {
-    color: #cecece;
+    color: #8f8f8f;
     font-size: small;
     font-style: italic;
 }
