--- a/phpmotors/assets/css/login.css
+++ b/phpmotors/assets/css/login.css
@@ -17,7 +17,7 @@ form input {
     margin-bottom: 15px;
 }
 
-form input[type="submit"] {
+form input[type='submit'] {
     background-color: #4c96d7;
     border: 2px solid black;
     border-radius: 10px;
@@ -29,7 +29,9 @@ form input[type="submit"] {
 }
 
 .muted {
-    color: #cecece;
+    max-width: 485px;
+    display: inline-block;
+    color: #8f8f8f;
     font-size: small;
     font-style: italic;
 }
